Fixed Mobile view visible on Desktop devices when toggles from inspector

--- a/src/app/components/shared/navbar/navbar.component.scss
+++ b/src/app/components/shared/navbar/navbar.component.scss
@@ -96,6 +96,9 @@
     flex-direction: column;
     gap: $nav-gap;
     align-items: center;
+
+    /* Default behavior */
+    display: none;
     
     .nav-link {
         @include font-regular($prime-text);
@@ -158,6 +161,10 @@
         max-width: 100%;
         padding: 0;
         background-color: $color-accent;
+    }
+
+    .nav-link-mobile { 
+        display: flex;
     }
 
     .nav-container {  
